fix container collapsing. Cause no comma

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-.clearfix:before
+.clearfix:before,
 .clearfix:after {
-	content:" ";
+	content: " ";
 	display: block;
 }
 .clearfix:after {
@@ -15,7 +15,7 @@
 	background: #222;
 }
 .left{
-	float:left;
+	float: left;
 }
 .right{
 	float: right;
